5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1621_2932.log
== TEST (2019-04-01 18:07:26) 
-- CODE:
R1= int(input("leia um numero:"))
R2= int(input("leia um numero:"))
R3= int(input("leia um numero:"))
Req= R1*R2*R3/R1*R2+R2*R3+R1*R3

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:08:41) 
-- CODE:
R1= int(input("leia um numero:"))
R2= int(input("leia um numero:"))
R3= int(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:37) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:14) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
R4=R1+R2+R3
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:31) 
-- CODE:
R1= int(input("leia um numero:"))
R2= int(input("leia um numero:"))
R3= int(input("leia um numero:"))

Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:02) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)


-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:04) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)
print(req, R1+R2+R3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(req, R1+R2+R3)
NameError: name 'req' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:47) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)
print(Req, R1+R2+R3)


-- OUTPUT:
410.0 50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:48) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)
print(Req, R1+R2+R3)


-- OUTPUT:
410.0 50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:48) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)
print(Req, R1+R2+R3)


-- OUTPUT:
410.0 50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:54) 
-- CODE:
R1= float(input("leia um numero:"))
R2= float(input("leia um numero:"))
R3= float(input("leia um numero:"))
Req= (R1*R2*R3)/(R1*R2)+(R2*R3)+(R1*R3)
print(req, R1+R2+R3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(req, R1+R2+R3)
NameError: name 'req' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
